<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidRemote</string>
    <string name="connectBttn">Connect</string>
    <string name="ipHint">IP:</string>
    <string name="buttonDisconnect">Disconnect</string>
    <string name="sendButton">Send</string>
    <string name="acceptButton">Accept</string>
    <string name="cancelButton">Cancel</string>
    <string name="passwordHint">Password</string>
    <string name="verifyPassword">Enter the password.</string>
    <string name="gamePadSensibility">1</string>
    <string name="TrackPadSensibility">1</string>
    <string name="MessageExit">Are you sure you want to exit?</string>
    <string name="titleExitDialog">Closing App</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="Button0">Button0</string>
    <string name="Button1">Button1</string>
    <string name="Button2">Button2</string>
    <string name="Button3">Button3</string>
    <string name="Button4">Button4</string>
    <string name="Button5">Button5</string>
    <string name="Button6">Button6</string>
    <string name="Button7">Button7</string>
    <string name="Button8">Button8</string>
    <string name="Button9">Button9</string>
    <string name="Button10">Button10</string>
    <string name="Button11">Button11</string>
    <string name="Button12">Button12</string>
    <string name="Button13">Button13</string>
    <string name="Button14">Button14</string>
    <string name="Button15">Button15</string>
    <string name="Button16">Button16</string>
    <string name="Button17">Button17</string>
    <string name="Button18">Button18</string>
    <string name="Button19">Button19</string>
    <string name="Button20">Button20</string>
    <string name="Button21">Button21</string>
    <string name="Button22">Button22</string>
    <string name="Button23">Button23</string>
    <string name="searchNetworks">Search</string>
    <string name="exit_question">¿Are you sure?</string>
    <string name="skins">Skins</string>
    <string name="options">Options</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="pause">Pause</string>
    <string name="gameCtrl_a">A</string>
    <string name="gameCtrl_b">B</string>
    <string name="gameCtrl_c">C</string>
    <string name="gameCtrl_d">D</string>
    <string name="gameCtrlSensibility">Game control sensibility</string>
    <string name="media">Media</string>
    <string name="presentation">Presentation</string>
    <string name="gameCtrl">Game Control</string>
    <string name="custom">Custom</string>
    <string name="passValidateTitle">Password validation</string>
    <string name="full_screen">Full screen</string>
    <string name="finish">Finish</string>
    <string name="timer">Timer</string>
    <string name="change_bttn_name">Change button name</string>
    <string name="ready">Ready!</string>
    <string name="new_name">add new name</string>
    <string name="save_changes">Save changes</string>
    <string name="track_sensiv">Trackpad sensibility</string>
    <string name="game_ctrl_sensiv">Game control sensibility</string>
    <string name="vol_up">Vol Up</string>
    <string name="vol_down">Vol Down</string>
    <string name="messageHowConnect">Para conectarse introduzca la IP de su computadora.</string>
    <string name="wayToConnect">Manually</string>

</resources>

        <!--
        Develop by Tomas Najun
        2013 - Argentina
        -->
