<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewConnect" android:layout_gravity="center" android:text="@string/verifyPassword"
            android:textSize="20dp"
            android:singleLine="false"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordText"
        android:hint="@string/passwordHint"/>

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <Button
                android:layout_width="153dp"
                android:layout_height="70dp"
                android:text="@string/acceptButton"
                android:id="@+id/buttonYes" android:layout_gravity="left|top"
                android:onClick="sendPassword" style="@style/button_black"/>

        <Button
                android:layout_width="163dp"
                android:layout_height="69dp"
                android:text="@string/cancelButton"
                android:id="@+id/buttonNO" android:layout_gravity="right|top"
                android:onClick="cancel" style="@style/button_black"/>
    </FrameLayout>
</LinearLayout>